Fixed reward vs risk section on Safari and removed wild n

--- a/main.css
+++ b/main.css
@@ -1724,6 +1724,7 @@ input[type=submit] {
     flex-direction: column;
     align-items: center;
     width: 80%;
+    min-height: 400px;
     padding-bottom: 40px; }
     .reward-vs-risk .content .title {
       margin-top: 0; }
@@ -1780,22 +1781,27 @@ input[type=submit] {
         justify-content: space-between; }
 
 @media (max-width: 875px) {
-  .reward-vs-risk .content .wrapper {
-    flex-direction: column; }
-    .reward-vs-risk .content .wrapper .left {
-      order: 1;
-      width: 100%;
-      text-align: center; }
-      .reward-vs-risk .content .wrapper .left img {
-        margin: 0 auto;
-        transform: translateX(-50%);
-        max-width: 100%; }
-    .reward-vs-risk .content .wrapper .right {
-      width: 100%;
-      margin: 0;
-      display: block; }
-      .reward-vs-risk .content .wrapper .right p {
-        max-width: 100%; } }
+  .reward-vs-risk .content {
+    min-height: 625px; }
+    .reward-vs-risk .content .wrapper {
+      flex-direction: column; }
+      .reward-vs-risk .content .wrapper .left {
+        order: 1;
+        width: 100%;
+        text-align: center; }
+        .reward-vs-risk .content .wrapper .left img {
+          margin: 0 auto;
+          transform: translateX(-50%);
+          max-width: 100%; }
+      .reward-vs-risk .content .wrapper .right {
+        width: 100%;
+        margin: 0;
+        display: block; }
+        .reward-vs-risk .content .wrapper .right p {
+          max-width: 100%; } }
+@media (max-width: 650px) {
+  .reward-vs-risk .content {
+    min-height: 700px; } }
 .quote-section {
   background: url("assets/images/Albert_Einstein.jpg");
   background-size: cover;
